class Exploits:
    """
    This class contains methods to perform various types of security attacks such as SQL injection,
    Cross-Site Scripting (XSS), and Remote Code Execution (RCE) on a given URL or input data.
    """

    def sql_injection(self, url: str) -> bool:
        """
        Simulates an SQL injection attack on the specified URL by checking for typical SQL injection payloads.

        Args:
            url (str): The URL to attack.

        Returns:
            bool: True if the attack is likely successful, False otherwise.
        """
        # Enhanced SQL injection logic with more realistic payload checks
        sql_injection_payloads = ["' OR '1'='1", "' OR 1=1 --", "' OR '1'='1' /*"]
        return any(payload in url for payload in sql_injection_payloads)

    def xss_attack(self, input_data: str) -> bool:
        """
        Simulates a Cross-Site Scripting (XSS) attack by checking for common XSS patterns in input data.

        Args:
            input_data (str): The data to check for XSS vulnerabilities (e.g., form inputs, headers).

        Returns:
            bool: True if the attack is likely successful, False otherwise.
        """
        # Enhanced XSS attack logic with pattern checks in input data
        xss_patterns = ["<script>", "javascript:", "onerror="]
        return any(pattern in input_data for pattern in xss_patterns)

    def rce_attack(self, input_data: str) -> bool:
        """
        Simulates a Remote Code Execution (RCE) attack by checking for dangerous commands in input data.

        Args:
            input_data (str): The data to check for RCE vulnerabilities (e.g., serialized data, server-side scripts).

        Returns:
            bool: True if the attack is likely successful, False otherwise.
        """
        # Enhanced RCE attack logic with command checks in input data
        dangerous_commands = ["exec(", "eval(", "system("]
        return any(cmd in input_data for cmd in dangerous_commands)
