## main.py

from exploits import Exploits
from report_generator import ReportGenerator

class Main:
    """
    Main class orchestrates the running of exploits and generating reports.
    """
    def __init__(self):
        """
        Initializes the Main class with instances of Exploits and ReportGenerator.
        """
        self.exploits = Exploits()
        self.report_generator = ReportGenerator()

    def run(self):
        """
        Executes the attacks and generates a report based on the results.
        """
        # URLs or input data for testing
        test_url = "http://localhost:9090"
        test_input_data = "<script>alert('XSS');</script>"

        # Perform attacks
        sql_injection_result = self.exploits.sql_injection(test_url)
        xss_result = self.exploits.xss_attack(test_input_data)
        rce_result = self.exploits.rce_attack(test_input_data)

        # Collect results in a dictionary
        results = {
            "SQLInjection": sql_injection_result,
            "XSS": xss_result,
            "RCE": rce_result
        }

        # Generate and print the report
        report = self.report_generator.generate_report(results)
        print(report)

# Entry point for the script
if __name__ == "__main__":
    main_instance = Main()
    main_instance.run()
