## report_generator.py

class ReportGenerator:
    """
    This class is responsible for generating reports based on the results of various security attacks.
    """

    def generate_report(self, data: dict) -> str:
        """
        Generates a formatted report from the provided data dictionary containing the results of security attacks.

        Args:
            data (dict): A dictionary with keys as the type of attack (e.g., 'SQLInjection', 'XSS', 'RCE')
                         and values as the boolean results of these attacks.

        Returns:
            str: A formatted string report detailing the outcomes of the attacks.
        """
        report_lines = ["Security Attack Report:"]
        for attack_type, result in data.items():
            status = "Successful" if result else "Failed"
            report_lines.append(f"{attack_type}: {status}")

        return "\n".join(report_lines)
