
classDiagram
    class Main {
        +exploits Exploits
        +report_generator ReportGenerator
        +run() void
    }
    class Exploits {
        +sql_injection(url: str) bool
        +xss_attack(url: str) bool
        +rce_attack(url: str) bool
    }
    class ReportGenerator {
        +generate_report(data: dict) str
    }
    Main --> Exploits
    Main --> ReportGenerator
